--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     }
   },
   "dependencies": {
-    "prom-client": "^12.0.0",
-    "underscore": "^1.11.0"
+    "prom-client": "^12.0.0"
   }
 }
