--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node-red-contrib-prometheus-exporter",
   "version": "1.0.0",
   "description": "A NodeRED node which allows exporting Prometheus metrics from within flows.",
+  "keywords": ["node-red", "prometheus", "telegraf"],
   "main": "index.js",
   "repository": {
     "type": "git",
