--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "node-red-contrib-prometheus-exporter",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A NodeRED node which allows exporting Prometheus metrics from within flows.",
-  "keywords": ["node-red", "prometheus", "telegraf"],
+  "keywords": [
+    "node-red",
+    "prometheus",
+    "telegraf"
+  ],
   "main": "index.js",
   "repository": {
     "type": "git",
